Probak txertatzea soilik falta da!

--- a/Jolasmatika/src/languages/Etiketak_en.properties
+++ b/Jolasmatika/src/languages/Etiketak_en.properties
@@ -6,6 +6,7 @@ English=English
 
 Back=Back
 Continue=Continue
+Finish=Create
 
 LayoutTitle=Draw the labyrinth
 LayoutStart=Select starting point
@@ -22,4 +23,11 @@ BlocksIfElse=If X... Else...
 BlocksRepUntil=Repeat until end
 BlocksAmount=Amount\:
 
-
+ConfirmTitle=Finish creating the game
+ConfirmInstructions=write a title and starting hint for the game
+ConfirmName=Name:
+ConfirmHint=Starting hint:
+ConfirmError=The app has malfunctioned, make sure it is installed properly
+ConfirmNameEmpty=Write a name please
+ConfirmHintEmpty=Write a starting hint please
+ConfirmComplete=Game created!
