--- a/Jolasmatika/src/languages/Etiketak_es.properties
+++ b/Jolasmatika/src/languages/Etiketak_es.properties
@@ -6,6 +6,7 @@ English=Inglés
 
 Back=Atras
 Continue=Continuar
+Finish=Crear
 
 LayoutTitle=Dibuja el laberinto
 LayoutStart=Elige el comienzo
@@ -21,3 +22,12 @@ BlocksIf=Si X...
 BlocksIfElse=Si X... si no...
 BlocksRepUntil=Repetir hasta el final
 BlocksAmount=Cantidad\:
+
+ConfirmTitle=Termina de crear el juego
+ConfirmInstructions=escribe el nombre y la pista inicial del juego
+ConfirmName=Nombre:
+ConfirmHint=Pista inicial:
+ConfirmError=Ha ocurrido un error, comprueba que la aplicación está instalada correctamente
+ConfirmNameEmpty=Escribe un nombre por favor
+ConfirmHintEmpty=Escribe una pista inicial por favor
+ConfirmComplete=Juego creado!
