--- a/Jolasmatika/src/languages/Etiketak_eu.properties
+++ b/Jolasmatika/src/languages/Etiketak_eu.properties
@@ -6,6 +6,7 @@ English=Ingelesa
 
 Back=Atzera
 Continue=Jarraitu
+Finish=Sortu
 
 LayoutTitle=Labirintoa marraztu
 LayoutStart=Hasiera puntua hautatu
@@ -21,3 +22,12 @@ BlocksIf=Baldin X...
 BlocksIfElse=Baldin X... Bestela...
 BlocksRepUntil=Errepikatu amaitu arte
 BlocksAmount=Kopurua\:
+
+ConfirmTitle=Jokoa sortzen amaitu
+ConfirmInstructions=txertatu jokoaren izena eta hasierako pista
+ConfirmName=Izena:
+ConfirmHint=Hasierako pista:
+ConfirmError=Aplikazioak arazoak ditu, ziurtatu ongi instalatuta dagoela
+ConfirmNameEmpty=Izena idatzi mesedez
+ConfirmHintEmpty=Hasierako pista idatzi mesedez
+ConfirmComplete=Jokoa sortuta!
